--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -30,4 +30,15 @@ code {
   text-transform: uppercase;
 }
 
+.site-img {
+  height: auto;
+  max-width: 40%;
+  max-height: 40%;
+
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 
